compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__comparison_op_wrong_types_less_eq.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "\n    % Numerics\n    var r : real\n    var i : int\n    var n : nat\n\n    % Other scalars\n    var b : boolean\n\n    % Sized charseqs\n    var c : char\n    var c_sz : char(6)\n    var s : string\n    var s_sz : string(6)\n\n    % Different sets\n    type s1 : set of boolean\n    type s2 : set of boolean\n    var as1 : s1\n    var bs2 : s2\n    var aas : set of boolean\n\n    % should all produce boolean anyway\n    var _v_res : boolean\n\n    _v_res := r <= b\n    _v_res := r <= c\n    _v_res := r <= c_sz\n    _v_res := r <= s\n    _v_res := r <= s_sz\n\n    _v_res := i <= b\n    _v_res := i <= c\n    _v_res := i <= c_sz\n    _v_res := i <= s\n    _v_res := i <= s_sz\n\n    _v_res := n <= b\n    _v_res := n <= c\n    _v_res := n <= c_sz\n    _v_res := n <= s\n    _v_res := n <= s_sz\n\n    _v_res := b <= r\n    _v_res := b <= i\n    _v_res := b <= n\n    _v_res := b <= c\n    _v_res := b <= c_sz\n    _v_res := b <= s\n    _v_res := b <= s_sz\n\n    _v_res := c <= r\n    _v_res := c <= i\n    _v_res := c <= n\n    _v_res := c <= b\n\n    _v_res := c_sz <= r\n    _v_res := c_sz <= i\n    _v_res := c_sz <= n\n    _v_res := c_sz <= b\n\n    _v_res := s <= r\n    _v_res := s <= i\n    _v_res := s <= n\n    _v_res := s <= b\n\n    _v_res := s_sz <= r\n    _v_res := s_sz <= i\n    _v_res := s_sz <= n\n    _v_res := s_sz <= b\n\n    % Incompatible sets\n    _v_res := as1 <= bs2\n    _v_res := bs1 <= as2\n    _v_res := aas <= as1\n    _v_res := as1 <= aas\n    "

---
"r"@(FileId(1), 24..25) [Declared]: real
"i"@(FileId(1), 41..42) [Declared]: int
"n"@(FileId(1), 57..58) [Declared]: nat
"b"@(FileId(1), 94..95) [Declared]: boolean
"c"@(FileId(1), 136..137) [Declared]: char
"c_sz"@(FileId(1), 153..157) [Declared]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"s"@(FileId(1), 176..177) [Declared]: string
"s_sz"@(FileId(1), 195..199) [Declared]: string_n Fixed(Unevaluated(LibraryId(0), BodyId(1)))
"s1"@(FileId(1), 248..262) [Declared]: <error>
"s1"@(FileId(1), 243..245) [Resolved(Type)]: set[DefId(LibraryId(0), LocalDefId(8))] of boolean
"s2"@(FileId(1), 277..291) [Declared]: <error>
"s2"@(FileId(1), 272..274) [Resolved(Type)]: set[DefId(LibraryId(0), LocalDefId(10))] of boolean
"as1"@(FileId(1), 300..303) [Declared]: set[DefId(LibraryId(0), LocalDefId(8))] of boolean
"bs2"@(FileId(1), 317..320) [Declared]: set[DefId(LibraryId(0), LocalDefId(10))] of boolean
"<anonymous>"@(FileId(1), 340..354) [Declared]: <error>
"aas"@(FileId(1), 334..337) [Declared]: set[DefId(LibraryId(0), LocalDefId(14))] of boolean
"_v_res"@(FileId(1), 404..410) [Declared]: boolean
"bs1"@(FileId(1), 1339..1342) [Undeclared]: <error>
"as2"@(FileId(1), 1346..1349) [Undeclared]: <error>
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 438..440: mismatched types for `<=`
| note in file FileId(1) for 441..442: this is of type `boolean`
| note in file FileId(1) for 436..437: this is of type `real`
| error in file FileId(1) for 438..440: `real` cannot be compared to `boolean`
| info: operands must both be the same type
error in file FileId(1) at 459..461: mismatched types for `<=`
| note in file FileId(1) for 462..463: this is of type `char`
| note in file FileId(1) for 457..458: this is of type `real`
| error in file FileId(1) for 459..461: `real` cannot be compared to `char`
| info: operands must both be the same type
error in file FileId(1) at 480..482: mismatched types for `<=`
| note in file FileId(1) for 483..487: this is of type `char(6)`
| note in file FileId(1) for 478..479: this is of type `real`
| error in file FileId(1) for 480..482: `real` cannot be compared to `char(6)`
| info: operands must both be the same type
error in file FileId(1) at 504..506: mismatched types for `<=`
| note in file FileId(1) for 507..508: this is of type `string`
| note in file FileId(1) for 502..503: this is of type `real`
| error in file FileId(1) for 504..506: `real` cannot be compared to `string`
| info: operands must both be the same type
error in file FileId(1) at 525..527: mismatched types for `<=`
| note in file FileId(1) for 528..532: this is of type `string(6)`
| note in file FileId(1) for 523..524: this is of type `real`
| error in file FileId(1) for 525..527: `real` cannot be compared to `string(6)`
| info: operands must both be the same type
error in file FileId(1) at 550..552: mismatched types for `<=`
| note in file FileId(1) for 553..554: this is of type `boolean`
| note in file FileId(1) for 548..549: this is of type `int`
| error in file FileId(1) for 550..552: `int` cannot be compared to `boolean`
| info: operands must both be the same type
error in file FileId(1) at 571..573: mismatched types for `<=`
| note in file FileId(1) for 574..575: this is of type `char`
| note in file FileId(1) for 569..570: this is of type `int`
| error in file FileId(1) for 571..573: `int` cannot be compared to `char`
| info: operands must both be the same type
error in file FileId(1) at 592..594: mismatched types for `<=`
| note in file FileId(1) for 595..599: this is of type `char(6)`
| note in file FileId(1) for 590..591: this is of type `int`
| error in file FileId(1) for 592..594: `int` cannot be compared to `char(6)`
| info: operands must both be the same type
error in file FileId(1) at 616..618: mismatched types for `<=`
| note in file FileId(1) for 619..620: this is of type `string`
| note in file FileId(1) for 614..615: this is of type `int`
| error in file FileId(1) for 616..618: `int` cannot be compared to `string`
| info: operands must both be the same type
error in file FileId(1) at 637..639: mismatched types for `<=`
| note in file FileId(1) for 640..644: this is of type `string(6)`
| note in file FileId(1) for 635..636: this is of type `int`
| error in file FileId(1) for 637..639: `int` cannot be compared to `string(6)`
| info: operands must both be the same type
error in file FileId(1) at 662..664: mismatched types for `<=`
| note in file FileId(1) for 665..666: this is of type `boolean`
| note in file FileId(1) for 660..661: this is of type `nat`
| error in file FileId(1) for 662..664: `nat` cannot be compared to `boolean`
| info: operands must both be the same type
error in file FileId(1) at 683..685: mismatched types for `<=`
| note in file FileId(1) for 686..687: this is of type `char`
| note in file FileId(1) for 681..682: this is of type `nat`
| error in file FileId(1) for 683..685: `nat` cannot be compared to `char`
| info: operands must both be the same type
error in file FileId(1) at 704..706: mismatched types for `<=`
| note in file FileId(1) for 707..711: this is of type `char(6)`
| note in file FileId(1) for 702..703: this is of type `nat`
| error in file FileId(1) for 704..706: `nat` cannot be compared to `char(6)`
| info: operands must both be the same type
error in file FileId(1) at 728..730: mismatched types for `<=`
| note in file FileId(1) for 731..732: this is of type `string`
| note in file FileId(1) for 726..727: this is of type `nat`
| error in file FileId(1) for 728..730: `nat` cannot be compared to `string`
| info: operands must both be the same type
error in file FileId(1) at 749..751: mismatched types for `<=`
| note in file FileId(1) for 752..756: this is of type `string(6)`
| note in file FileId(1) for 747..748: this is of type `nat`
| error in file FileId(1) for 749..751: `nat` cannot be compared to `string(6)`
| info: operands must both be the same type
error in file FileId(1) at 774..776: mismatched types for `<=`
| note in file FileId(1) for 777..778: this is of type `real`
| note in file FileId(1) for 772..773: this is of type `boolean`
| error in file FileId(1) for 774..776: `boolean` cannot be compared to `real`
| info: operands must both be the same type
error in file FileId(1) at 795..797: mismatched types for `<=`
| note in file FileId(1) for 798..799: this is of type `int`
| note in file FileId(1) for 793..794: this is of type `boolean`
| error in file FileId(1) for 795..797: `boolean` cannot be compared to `int`
| info: operands must both be the same type
error in file FileId(1) at 816..818: mismatched types for `<=`
| note in file FileId(1) for 819..820: this is of type `nat`
| note in file FileId(1) for 814..815: this is of type `boolean`
| error in file FileId(1) for 816..818: `boolean` cannot be compared to `nat`
| info: operands must both be the same type
error in file FileId(1) at 837..839: mismatched types for `<=`
| note in file FileId(1) for 840..841: this is of type `char`
| note in file FileId(1) for 835..836: this is of type `boolean`
| error in file FileId(1) for 837..839: `boolean` cannot be compared to `char`
| info: operands must both be the same type
error in file FileId(1) at 858..860: mismatched types for `<=`
| note in file FileId(1) for 861..865: this is of type `char(6)`
| note in file FileId(1) for 856..857: this is of type `boolean`
| error in file FileId(1) for 858..860: `boolean` cannot be compared to `char(6)`
| info: operands must both be the same type
error in file FileId(1) at 882..884: mismatched types for `<=`
| note in file FileId(1) for 885..886: this is of type `string`
| note in file FileId(1) for 880..881: this is of type `boolean`
| error in file FileId(1) for 882..884: `boolean` cannot be compared to `string`
| info: operands must both be the same type
error in file FileId(1) at 903..905: mismatched types for `<=`
| note in file FileId(1) for 906..910: this is of type `string(6)`
| note in file FileId(1) for 901..902: this is of type `boolean`
| error in file FileId(1) for 903..905: `boolean` cannot be compared to `string(6)`
| info: operands must both be the same type
error in file FileId(1) at 928..930: mismatched types for `<=`
| note in file FileId(1) for 931..932: this is of type `real`
| note in file FileId(1) for 926..927: this is of type `char`
| error in file FileId(1) for 928..930: `char` cannot be compared to `real`
| info: operands must both be the same type
error in file FileId(1) at 949..951: mismatched types for `<=`
| note in file FileId(1) for 952..953: this is of type `int`
| note in file FileId(1) for 947..948: this is of type `char`
| error in file FileId(1) for 949..951: `char` cannot be compared to `int`
| info: operands must both be the same type
error in file FileId(1) at 970..972: mismatched types for `<=`
| note in file FileId(1) for 973..974: this is of type `nat`
| note in file FileId(1) for 968..969: this is of type `char`
| error in file FileId(1) for 970..972: `char` cannot be compared to `nat`
| info: operands must both be the same type
error in file FileId(1) at 991..993: mismatched types for `<=`
| note in file FileId(1) for 994..995: this is of type `boolean`
| note in file FileId(1) for 989..990: this is of type `char`
| error in file FileId(1) for 991..993: `char` cannot be compared to `boolean`
| info: operands must both be the same type
error in file FileId(1) at 1016..1018: mismatched types for `<=`
| note in file FileId(1) for 1019..1020: this is of type `real`
| note in file FileId(1) for 1011..1015: this is of type `char(6)`
| error in file FileId(1) for 1016..1018: `char(6)` cannot be compared to `real`
| info: operands must both be the same type
error in file FileId(1) at 1040..1042: mismatched types for `<=`
| note in file FileId(1) for 1043..1044: this is of type `int`
| note in file FileId(1) for 1035..1039: this is of type `char(6)`
| error in file FileId(1) for 1040..1042: `char(6)` cannot be compared to `int`
| info: operands must both be the same type
error in file FileId(1) at 1064..1066: mismatched types for `<=`
| note in file FileId(1) for 1067..1068: this is of type `nat`
| note in file FileId(1) for 1059..1063: this is of type `char(6)`
| error in file FileId(1) for 1064..1066: `char(6)` cannot be compared to `nat`
| info: operands must both be the same type
error in file FileId(1) at 1088..1090: mismatched types for `<=`
| note in file FileId(1) for 1091..1092: this is of type `boolean`
| note in file FileId(1) for 1083..1087: this is of type `char(6)`
| error in file FileId(1) for 1088..1090: `char(6)` cannot be compared to `boolean`
| info: operands must both be the same type
error in file FileId(1) at 1110..1112: mismatched types for `<=`
| note in file FileId(1) for 1113..1114: this is of type `real`
| note in file FileId(1) for 1108..1109: this is of type `string`
| error in file FileId(1) for 1110..1112: `string` cannot be compared to `real`
| info: operands must both be the same type
error in file FileId(1) at 1131..1133: mismatched types for `<=`
| note in file FileId(1) for 1134..1135: this is of type `int`
| note in file FileId(1) for 1129..1130: this is of type `string`
| error in file FileId(1) for 1131..1133: `string` cannot be compared to `int`
| info: operands must both be the same type
error in file FileId(1) at 1152..1154: mismatched types for `<=`
| note in file FileId(1) for 1155..1156: this is of type `nat`
| note in file FileId(1) for 1150..1151: this is of type `string`
| error in file FileId(1) for 1152..1154: `string` cannot be compared to `nat`
| info: operands must both be the same type
error in file FileId(1) at 1173..1175: mismatched types for `<=`
| note in file FileId(1) for 1176..1177: this is of type `boolean`
| note in file FileId(1) for 1171..1172: this is of type `string`
| error in file FileId(1) for 1173..1175: `string` cannot be compared to `boolean`
| info: operands must both be the same type
error in file FileId(1) at 1198..1200: mismatched types for `<=`
| note in file FileId(1) for 1201..1202: this is of type `real`
| note in file FileId(1) for 1193..1197: this is of type `string(6)`
| error in file FileId(1) for 1198..1200: `string(6)` cannot be compared to `real`
| info: operands must both be the same type
error in file FileId(1) at 1222..1224: mismatched types for `<=`
| note in file FileId(1) for 1225..1226: this is of type `int`
| note in file FileId(1) for 1217..1221: this is of type `string(6)`
| error in file FileId(1) for 1222..1224: `string(6)` cannot be compared to `int`
| info: operands must both be the same type
error in file FileId(1) at 1246..1248: mismatched types for `<=`
| note in file FileId(1) for 1249..1250: this is of type `nat`
| note in file FileId(1) for 1241..1245: this is of type `string(6)`
| error in file FileId(1) for 1246..1248: `string(6)` cannot be compared to `nat`
| info: operands must both be the same type
error in file FileId(1) at 1270..1272: mismatched types for `<=`
| note in file FileId(1) for 1273..1274: this is of type `boolean`
| note in file FileId(1) for 1265..1269: this is of type `string(6)`
| error in file FileId(1) for 1270..1272: `string(6)` cannot be compared to `boolean`
| info: operands must both be the same type
error in file FileId(1) at 1318..1320: mismatched types for `<=`
| note in file FileId(1) for 1321..1324: this is of type `set s2 (of boolean)`
| note in file FileId(1) for 1314..1317: this is of type `set s1 (of boolean)`
| error in file FileId(1) for 1318..1320: `set s1 (of boolean)` cannot be compared to `set s2 (of boolean)`
| info: operands must both be the same type
error in file FileId(1) at 1368..1370: mismatched types for `<=`
| note in file FileId(1) for 1371..1374: this is of type `set s1 (of boolean)`
| note in file FileId(1) for 1364..1367: this is of type `set <anonymous> (of boolean)`
| error in file FileId(1) for 1368..1370: `set <anonymous> (of boolean)` cannot be compared to `set s1 (of boolean)`
| info: operands must both be the same type
error in file FileId(1) at 1393..1395: mismatched types for `<=`
| note in file FileId(1) for 1396..1399: this is of type `set <anonymous> (of boolean)`
| note in file FileId(1) for 1389..1392: this is of type `set s1 (of boolean)`
| error in file FileId(1) for 1393..1395: `set s1 (of boolean)` cannot be compared to `set <anonymous> (of boolean)`
| info: operands must both be the same type
