compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__deref_op_as_rhs.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var ptr : ^int var j := ^ptr"

---
"ptr"@(FileId(1), 4..7) [Declared]: pointer to int
"j"@(FileId(1), 19..20) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

