compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__deref_op_err_wrong_value.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type ptr : ^int ^ptr"

---
"ptr"@(FileId(1), 5..8) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of pointer to int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 16..20: cannot use expression as a statement
| error in file FileId(1) for 16..20: expression is not a statement
error in file FileId(1) at 17..20: cannot use `ptr` as an expression
| error in file FileId(1) for 17..20: `ptr` is a reference to a type, not a variable
| note in file FileId(1) for 5..8: `ptr` declared here
