compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__deref_op_from_const_ptr.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "const ptr : ^int\n^ptr := 2\n"

---
"ptr"@(FileId(1), 6..9) [Declared]: pointer to int
"<root>"@(dummy) [Declared]: <error>

