compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__deref_op_to_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type p : ^\nvar ptr : p\nvar j := ^ptr\n"

---
"p"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of pointer to <error>
"ptr"@(FileId(1), 15..18) [Declared]: alias[DefId(LibraryId(0), LocalDefId(0))] of pointer to <error>
"j"@(FileId(1), 27..28) [Declared]: <error>
"<root>"@(dummy) [Declared]: <error>

