compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__deref_op_with_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var _ := ^()"

---
"_"@(FileId(1), 4..5) [Declared]: <error>
"<root>"@(dummy) [Declared]: <error>

