compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__do_type_coercion_comparison_ops.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "var i1 : int1\nvar i : int\nvar _res : boolean\n_res := i < i1\n"

---
"i1"@(FileId(1), 4..6) [Declared]: int1
"i"@(FileId(1), 18..19) [Declared]: int
"_res"@(FileId(1), 30..34) [Declared]: boolean
"<root>"@(dummy) [Declared]: <error>

