compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__do_type_coercion_equality_ops.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "var c1 : char(1)\nvar c : char\nvar _res : boolean\n_res := c = c1\n"

---
"c1"@(FileId(1), 4..6) [Declared]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"c"@(FileId(1), 21..22) [Declared]: char
"_res"@(FileId(1), 34..38) [Declared]: boolean
"<root>"@(dummy) [Declared]: <error>

