compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__do_type_coercion_for_bounds.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var i1 : int1\nvar i : int\nvar _res : boolean\nfor : i .. i1 end for\n"

---
"i1"@(FileId(1), 4..6) [Declared]: ref_mut int1
"i"@(FileId(1), 18..19) [Declared]: ref_mut int
"_res"@(FileId(1), 30..34) [Declared]: ref_mut boolean
"<root>"@(dummy) [Declared]: <error>

